# openai-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  library.json
cmake/: openai-cConfig.cmake.in  openai-cConfigVersion.cmake.in
example/: CMakeLists.txt  Makefile
example/esp32/: platformio.ini
example/esp32/src/: main.cpp
example/src/: main.c
example/window-linux/: CMakeLists.txt
example/window-linux/src/: main.c
include/: client.h  error.h  openai-c.h  request.h
include/esp32/: error.h  esp32-client.h  esp32-openai-c.h  esp32-request.h  openai-c.h  request.h
ports/openai-c/: portfile.cmake  vcpkg.json
src/: client.c  error.c  request.c
src/esp32/: client.cpp  error.c  esp32-client.c  esp32-error.c  esp32-request.cpp  request.cpp
